--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -15,14 +15,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -e .
+
       - name: Run pytest
         run: pytest -q
